# snippets_store

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  run.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  api.py
backend/app/api/endpoints/: __init__.py  categories.py  collections.py  snippets.py  tags.py
backend/app/crud/: __init__.py  category.py  collection.py  snippet.py  tag.py
backend/app/models/: __init__.py  category.py  collection.py  snippet.py  tag.py
backend/app/schemas/: __init__.py  camel_model.py  category.py  collection.py  snippet.py  tag.py
backend/app/utils/: __init__.py  error_handling.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  run_tests.py  seed_data.py
backend/tests/test_api/: test_snippet_api.py
backend/tests/test_crud/: test_snippet_crud.py
backend/tests/test_models/: test_snippet.py
docs/: backend-api-specification.md  backend-implementation-plan.md  design-doc.md  frontend-implementation-plan.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: index.ts  providers.tsx
frontend/components/categories/: category-tree.tsx
frontend/components/layout/: mobile-sidebar.tsx  sidebar.tsx  simplified-snippet-detail.tsx  snippet-detail.tsx  snippet-list.tsx  top-menu-bar.tsx
frontend/hooks/: use-snippet-form.ts
frontend/lib/: codemirror.ts  logger.ts  utils.ts
frontend/types/: index.ts
memory_bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
(+9 files in other folders)
