[project]
name = "snippets-store"
version = "0.1.0"
description = "Code Snippet Manager Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.22",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "alembic>=1.12.0",
    "python-multipart>=0.0.6",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=6.1.1",
    "httpx>=0.25.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
